Fix page content alignment, add hero image

--- a/wp-content/themes/index-coatings/assets/styles/pages/_standard.scss
+++ b/wp-content/themes/index-coatings/assets/styles/pages/_standard.scss
@@ -7,7 +7,6 @@
 
 .page-content {
   padding: 60px 20px;
-  text-align: center;
 
   @include media($mobile-down) {
     padding: 30px 20px;
